	     -  Instance automatique du plugin.
		  - Enrichissement de la syntaxe et des fonctions utilisateurs pour la création de plugins.
	* Correction dans le htaccess pour la prise en charge et réécriture automatique des plugins enregistré
	* Correction de la prise en charge du javascript dans les plugins partie administration.
	
Stable 2.3.0
	* Ajout de la réécriture automatique des images dans le catalogue.
	* Ajout de la réécriture automatique des images dans les galeries du catalogue.
	* Mise à jour de tinyMCE 3.3.3 => 3.3.5.1
	* Correction orthographique dans divers fichiers.
	* Modification du dashboard (licence, boutons)
	* Ajout icon cart dans sprite administration
	* Ajout de la licence dans la configuration principale
	
beta 2.2.29
	* Intégration du système de template dynamique pour la partie admin des plugins
	* Ajout de la fonction addTemplates
	* Déplacement des skins des plugins admin dans le dossier de son propre plugin
	* Modification du système de plugin avec autochargement des classes du dossier "plugins"
	* Suppression des règles de réécriture d'url dans l'administration (tous les fichiers)
	
beta 2.2.28
	* Modification requête SQL pour l'ordre des catégories CMS
	* Suppression de la réécriture des URLS dans l'administration (Changement important!!!!)
	      - Modification du fil d'Ariane dans l'administration
	      - Correction des URLS pour les requête ajax dans le fichier JS global
	      - Changement des liens dans le footer de l'administration.
	      - Ajout d'un favicon.ico et favicon.png dans l'administration
		Note : Les modules modifiés
			     - utilisateurs
			     - Langues
			     - Configuration
			     - Thémes
			     - CMS
	
beta 2.2.27
	* Upgrade tinymce 3.3.1 => 3.3.3
	* Fix bug affichage du menu déroulant sous Google Chrome
	* Fix bug affichage formulaire (fieldset) sous Google Chrome
	* Renforcement des sessions utilisateurs (sécurité)
	
beta 2.2.26
	* Ajout de la colorisation syntaxique dans tinyMCE (rj_insert_code)