@@ -372,3 +372,6 @@ div.fg-button { width:auto; overflow:visible; }
 #viewskin .img-screen a:hover{cursor:pointer;}
 #viewskin .title-skin{padding:2px 5px 2px 5px;}
 #version{width:60%;}
+/*PLUGIN*/
+ul.plugin-list{}
+ul.plugin-list li{}
